dist/base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fuxiapp: base
  name: base
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      fuxiapp: base
  strategy: {}
  template:
    metadata:
      labels:
        fuxiapp: base
    spec:
      containers:
      - name: base
        args: ["--registry", "etcd", "--registry_address", "etcd.kube-system.svc.cluster.local:2379"]
        image: yametech/base:v0.1.0
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
