dist/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: etcd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fuxi-net: "true"
        io.kompose.service: etcd
    spec:
      containers:
      - args:
        - etcd
        - -name
        - etcd1
        - -advertise-client-urls=http://0.0.0.0:2379
        - -listen-client-urls=http://0.0.0.0:2379
        - -initial-cluster-state
        - new
        image: quay.io/coreos/etcd:latest
        imagePullPolicy: Always
        name: etcd
        ports:
        - containerPort: 2379
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etcd-data
          name: etcd-claim0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: etcd-claim0
        persistentVolumeClaim:
          claimName: etcd-claim0
