dist/hystrix-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: hystrix-dashboard
  name: hystrix-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hystrix-dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fuxi-net: "true"
        io.kompose.service: hystrix-dashboard
    spec:
      containers:
      - image: mlabouardy/hystrix-dashboard
        imagePullPolicy: ""
        name: hystrix-dashboard
        ports:
        - containerPort: 9002
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
