dist/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fuxi-net: "true"
        io.kompose.service: mysql
    spec:
      containers:
      - image: mysql:5.7
        imagePullPolicy: ""
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: mysql-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-claim0
        persistentVolumeClaim:
          claimName: mysql-claim0
status: {}
