dist/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webhook
  name: webhook
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  strategy: {}
  template:
    metadata:
      labels:
        app: webhook
    spec:
      serviceAccount: fuxi-app
      containers:
        - name: webhook
          image: yametech/webhook:v0.1.0
          args: ["--registry", "etcd", "--registry_address", "etcd.kube-system.svc.cluster.local:2379", "--etcd_address", "etcd.kube-system.svc.cluster.local:2379","--in_cluster","true"]
          imagePullPolicy: Always
      restartPolicy: Always
