dist/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workload
  name: workload
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workload
  strategy: {}
  template:
    metadata:
      labels:
        app: workload
    spec:
      containers:
      - name: workload
        image: yametech/workload:v0.1.0
        args: 
        - --registry=etcd
        - --registry_address=etcd.nfs-system.svc.cluster.local:2379
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
