dist/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: etcd
  name: etcd
spec:
  ports:
  - name: "2379"
    port: 2379
    targetPort: 2379
  selector:
    io.kompose.service: etcd
status:
  loadBalancer: {}
