dist/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        args: ["--registry", "etcd", "--registry_address", "etcd.kube-system.svc.cluster.local:2379", "api","--handler=http"]
        image: yametech/gateway:v0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: kube-system
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: gateway
