dist/hystrix-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: hystrix-dashboard
  name: hystrix-dashboard
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 9002
  selector:
    io.kompose.service: hystrix-dashboard
status:
  loadBalancer: {}
